Initial work on rule/config page

--- a/cmd/bosun/web/static/templates/index.html
+++ b/cmd/bosun/web/static/templates/index.html
@@ -134,6 +134,8 @@
 		<script src="/static/js/angular-sanitize.min.js"></script>
 		<script src="/static/js/angular-strap.js"></script>
 		<script src="/static/js/angular-strap.tpl.min.js"></script>
+		<script src="/static/js/ace/ace.js"></script>
+		<script src="/static/js/angular-ace.js"></script>
 		<script src="/static/js/bootstrap.min.js"></script>
 		<script src="/static/js/moment.min.js"></script>
 		<script src="/static/js/moment-duration-format.min.js"></script>
